--- a/lucrare/1-introducere.tex
+++ b/lucrare/1-introducere.tex
@@ -55,12 +55,12 @@ menționat anterior.
 \section{Motivația Personală}
 
 Din fire, încerc mereu să aprofundez cât mai în amănunt subiectele care mă
-interesează, pentru a înțelege în profunzime. Natural -- consider eu -- am
-ajuns atras de subdomeniul securității care presupune o înțelegere profundă a
-sistemelor informatice. Dintre atacurile cibernetice, \emph{Spectre} și
-\emph{Meltdown} mi-au stârnit interesul și curiozitatea pe deoparte prin
-rezultatele remarcabile obținute și pe de altă parte prin nivelul ridicat de
-subtilitate al vulnerabilitatilor exploatate.
+interesează, pentru a le înțelege în profunzime. Ca urmare, am ajuns atras de
+subdomeniul securității care presupune o înțelegere profundă a sistemelor
+informatice. Dintre atacurile cibernetice, \emph{Spectre} și \emph{Meltdown}
+mi-au stârnit interesul și curiozitatea pe deoparte prin rezultatele
+remarcabile obținute și pe de altă parte prin nivelul ridicat de subtilitate al
+vulnerabilităților exploatate.
 
 \section{Scopul Lucrării}
 
@@ -81,8 +81,10 @@ victimă, fără acces la spațiul acestuia de memorie, ci doar la o zona limita
 de memorie partajată. În scopul realizării acestui exemplu au fost utilizate
 tehnicile și noțiunile ce vor fi descrise pe parcursul acestei lucrări. Sursele sunt
 publice și pot fi vizualizate la următoarele adrese:
-\href{https://gist.github.com/Stefan-Radu/ca918598c9cce84429f566e020d93d15}{victima},
-\href{https://gist.github.com/Stefan-Radu/29732c53a7d552fdec06fb46a801bd51}{atacator}.
+\href{https://gist.github.com/Stefan-Radu/ca918598c9cce84429f566e020d93d15}{victima}
+\footnote[1]{accesibil la: https://gist.github.com/Stefan-Radu/ca918598c9cce84429f566e020d93d15},
+\href{https://gist.github.com/Stefan-Radu/29732c53a7d552fdec06fb46a801bd51}{atacator}
+\footnote[2]{accesibil la: https://gist.github.com/Stefan-Radu/29732c53a7d552fdec06fb46a801bd51}.
 
 \section{Structura Lucrării}
 
@@ -90,13 +92,13 @@ Lucrarea este împărțită în următoarele capitole:
 
 \begin{enumerate}
   \item Introducere - se prezintă o viziune de ansamblu asupra atacurilor ce
-    urmează să fie prezentate, un mic istoric al tehiniclor, și motivația
+    urmează să fie prezentate, un mic istoric al tehniclor, și motivația
     personală pentru realizarea acestei lucrări.
   \item Preliminarii - se prezintă noțiuni de \emph{Sisteme de Operare},
     \emph{Arhitectura Sistemelor de Calcul} și \emph{Securitate} relevante
     înțelegerii atacurilor discutate.
   \item Atacul Meltdown - se discută detalii de funcționalitate, metode de
-    mitigare și detalii de reproducere a atacului meltdown.
+    mitigare și detalii de reproducere a atacului Meltdown.
   \item Atacuri Spectre - se ilustrează deosebirile față de Meltdown, precum și
     detalii specifice de funcționalitate pentru cele două variante principale
     ale Spectre. Sunt prezentate metode de mitigare și starea actuală a
